--- a/vercel.json
+++ b/vercel.json
@@ -20,4 +20,7 @@
             "dest": "textutils/wsgi.py"
         }
     ]
+    "rewrites": [
+        { "source": "/(.*)", "destination": "/" }
+    ]
 }
